; ModuleID = '/home/carl/AnghaBench/qmk_firmware/drivers/gpio/extr_pca9555.c_pca9555_init.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/drivers/gpio/extr_pca9555.c_pca9555_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pca9555_init.s_init = internal global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pca9555_init(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @pca9555_init.s_init, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %7, label %5

5:                                                ; preds = %1
  %6 = call i32 (...) @i2c_init()
  store i32 1, i32* @pca9555_init.s_init, align 4
  br label %7

7:                                                ; preds = %5, %1
  ret void
}

declare dso_local i32 @i2c_init(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
